debian-installer (20150428) UNRELEASED; urgency=medium

  [ Didier Raboud ]
  * In syslinux configuration, drop default64 statements that have not
    been working since Squeeze
  * In syslinux configuration, reorder alternatives to put the gtk
    option first
  * Default to graphical install, reorder and rephrase the help texts
    (Closes: #485586)

  [ Steven Chamberlain]
  * Slightly reduce kfreebsd-amd64 MFSROOT to 68 MiB, reducing total
    memory requirement to 160 MiB and leaving about 4 MiB safety margin.
    (Closes: #783773)
  * For kfreebsd, override /etc/default-release to unstable, and use
    jessie-kfreebsd as the default stable release, as used by
    choose-mirror.

 -- Didier Raboud <odyx@debian.org>  Sun, 29 Mar 2015 17:43:38 +0200

debian-installer (20150422) unstable; urgency=medium

  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 22 Apr 2015 21:41:38 +0200

debian-installer (20150418) unstable; urgency=medium

  [ Karsten Merker ]
  * Add util/gen-hd-image (a script to create partitioned harddisk images
    from a directory and optionally install a bootloader into the image).
  * Add SD-card image build support for hd-media builds on armhf.
  * Add SD-card image and tftpboot tarball build support for netboot builds
    on armhf.
  * Add u-boot-imx, u-boot-omap and u-boot-sunxi to the "built-using"
    package list.
  * util/gen-hd-image: set proper permissions for the generated partition
    image.
  * Add a symlink boot.scr.uimg -> debian-installer/armhf/tftpboot.scr
    in the armhf netboot.tar.gz to support network autoboot with modern
    u-boot versions.
  * Provide u-boot and SD-card images for the Olimex A20-OLinuXino-MICRO
    and for the LinkSprite pcDuino3 (support for both has been added
    in u-boot 2014.10+dfsg1-5).

  [ Ben Hutchings ]
  * Include fb-modules on powerpc if available (Closes: #782059).

  [ Cyril Brulebois ]