@@ -25,7 +25,7 @@
 #   http://ftp.XX.debian.org/debian/dists/stable/main/installer-i386/current/images/netboot/xen/
 # where XX is a country code, see http://www.debian.org/mirror/list
 # for a complete list of official mirrors. "stable" can be any distro
-# name (e.g. squeeze, wheezy, jessie, testing, sid, unstable).
+# name (e.g. squeeze, wheezy, jessie, stretch, testing, sid, unstable).
 #
 # Uncomment the "kernel" and "ramdisk" options and adjust the path to
 # point to the downloaded files.
