@@ -44,13 +44,13 @@ MKLIBS = mklibs
 DPKG_UNPACK_OPTIONS = --force-overwrite
 
 # The codename of the Debian release that should be installed by default.
-DEBIAN_RELEASE = jessie
+DEBIAN_RELEASE = stretch
 
 # The version (number and codename) of the Debian release targeted by the
 # installation images. (Only the codename is used while the version number
 # has not yet been determined.)
-DEBIAN_VERSION = 8 (jessie)
-DEBIAN_VERSION ?= jessie
+DEBIAN_VERSION = 9 (stretch)
+DEBIAN_VERSION ?= stretch
 
 # Define here from what release (codename!) components (udebs) should be taken
 # to build debian-installer. By default this is set to 'unstable' for building
